--- a/drivers/dma/Kconfig
+++ b/drivers/dma/Kconfig
@@ -580,6 +580,11 @@ config DMA_RX_BENCHMARK
 	help
 	  Simple benchmark for RX performance of the DMA API.
 
+config DMA_COHERENT_RX_BENCHMARK
+	tristate "DMA Coherent RX Benchmark"
+	help
+	  Simple benchmark for RX performance using coherent memory.
+
 config DMA_ENGINE_RAID
 	bool
 
