--- a/arch/arm/boot/dts/imx6q-zii-rdu2.dtsi
+++ b/arch/arm/boot/dts/imx6q-zii-rdu2.dtsi
@@ -687,6 +687,18 @@
 	pinctrl-0 = <&pinctrl_pcie>;*/
 	reset-gpio = <&gpio7 12 0>;
 	status = "okay";
+
+	host@0 {
+		#address-cells = <3>;
+		#size-cells = <2>;
+		reg = <0 0 0 0 0>;
+		device_type = "pci";
+
+		i210: i210@0 {
+			reg = <0 0 0 0 0>;
+			device_type = "pci";
+		};
+	};
 };
 
 &uart1 {
